# adapterforge

./: .env copy.example  .gitignore  CLAUDE.md  Makefile  README.md  data.dvc  docker-compose.marquez.yml  requirements-gpu.txt  requirements.txt
.dvc/: config
adapter-sdk/: pyproject.toml
adapter-sdk/src/adapter_sdk/: __init__.py  base.py  corrupt.py
adapter-sdk/src/adapter_sdk/adapters/: __init__.py  csv.py  hf.py  rest.py
adapter-sdk/src/adapter_sdk/schemas/: __init__.py  v1.py
adapter-sdk/tests/: test_base.py  test_corrupt.py  test_csv_adapter.py  test_hf_adapter.py  test_land.py  test_rest_adapter.py  test_schema_v1.py  test_smoke.py  test_validate.py
adapter-sdk/tests/fixtures/: alphavantage_sample.json  twitter_financial_news_sample.csv
control-plane/: app.py  audit.jsonl
docs/: PROJECT_PLAN.md  USAGE.md  architecture.md  deferred-backlog.md  drift_report.html  m0-session-notes.md  m2-flow.md  m2-session-notes.md  m3-session-notes.md  m4-session-notes.md  m5-distillation-concepts.md  m5-distillation-results.md  m5-distributed-results.md  m5-efficiency-results.md  m5-floating-point-primer.md  m5-interconnect-notes.md  m5-session-notes.md  m5-training-concepts.md  m6-benchmark-results.md  m6-serving-concepts.md  m6-serving-selection-note.md  m6-session-notes.md  m7-concepts.md  m7-session-notes.md  m8-concepts.md  m8-session-notes.md  operating-model.md  practicum-vision.md  runpod-m6-benchmark.md  runpod-m6-mig-dcgm.md  runpod-workflow.md
infra/: eks.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
(+68 files in other folders)
